--- a/index.html
+++ b/index.html
@@ -26,6 +26,26 @@
                 <label class="list-group-item d-flex gap-3">
                   <input class="form-check-input flex-shrink-0" type="checkbox" value="" style="font-size: 1.375em;">
                   <span class="pt-1 form-checked-content">
+                  <strong><a href="https://www.amazon.com/Valor-Faithful-Fallen-John-Gwynne/dp/0316399744" target="_blank">Valour</a> by John Gwynne</strong>
+                  <small class="d-block text-muted">
+                    <i class="bi bi-book" height="1em" width="1em"></i>
+                      16/02/2024
+                  </small>
+                  </span>
+                </label>
+                <label class="list-group-item d-flex gap-3">
+                  <input class="form-check-input flex-shrink-0" type="checkbox" value="" style="font-size: 1.375em;">
+                  <span class="pt-1 form-checked-content">
+                  <strong><a href="https://www.amazon.com/Thinking-Systems-Donella-H-Meadows/dp/1603580557/" target="_blank">Thinking in Systems</a> by Donella H. Meadows</strong>
+                  <small class="d-block text-muted">
+                    <i class="bi bi-book" height="1em" width="1em"></i>
+                      14/02/2024
+                  </small>
+                  </span>
+                </label>
+                <label class="list-group-item d-flex gap-3">
+                  <input class="form-check-input flex-shrink-0" type="checkbox" value="" checked="" style="font-size: 1.375em;">
+                  <span class="pt-1 form-checked-content">
                   <strong><a href="https://www.amazon.com/Surely-Feynman-Adventures-Curious-Character/dp/0393316041" target="_blank">Surely You're Joking, Mr. Feynman!</a> by Richard P. Feynman</strong>
                   <small class="d-block text-muted">
                     <i class="bi bi-book" height="1em" width="1em"></i>
@@ -34,7 +54,7 @@
                   </span>
                 </label>
                 <label class="list-group-item d-flex gap-3">
-                  <input class="form-check-input flex-shrink-0" type="checkbox" value="" style="font-size: 1.375em;">
+                  <input class="form-check-input flex-shrink-0" type="checkbox" value="" checked="" style="font-size: 1.375em;">
                   <span class="pt-1 form-checked-content">
                   <strong><a href="https://www.amazon.com/Malice-Faithful-Fallen-John-Gwynne/dp/0316399736" target="_blank">Malice</a> by John Gwynne</strong>
                   <small class="d-block text-muted">
@@ -112,6 +132,15 @@
                 Topics are usually related to startups, technology, security, and books.
             </p>
             <div class="list-group list-group-mine w-auto">
+                <a href="https://realpython.com/podcasts/rpp/190/" class="list-group-item list-group-item-action d-flex gap-3 py-3" target="_blank">
+                  <div class="d-flex gap-2 w-100 justify-content-between">
+                    <div>
+                      <h6 class="mb-0">Great Starting Points for Contributing to Open Source</h6>
+                      <p class="mb-0 opacity-75">In case you want to get started contributing to Open Source with Python.</p>
+                    </div>
+                    <small class="opacity-50 text-nowrap">11/02/2024</small>
+                  </div>
+                </a>
                 <a href="https://www.youtube.com/watch?v=9IiTdSnmS7E" class="list-group-item list-group-item-action d-flex gap-3 py-3" target="_blank">
                   <div class="d-flex gap-2 w-100 justify-content-between">
                     <div>
