--- a/index.html
+++ b/index.html
@@ -23,12 +23,22 @@
             <h4><u>Books</u></h4>
             <p>Here you may find all the books I have read this year:<br></p>
             <div class="list-group w-auto list-group-mine">
+              <label class="list-group-item d-flex gap-3">
+                <input class="form-check-input flex-shrink-0" type="checkbox" value="" style="font-size: 1.375em;">
+                <span class="pt-1 form-checked-content">
+                <strong><a href="https://www.amazon.com/Ruin-Faithful-Fallen-John-Gwynne/dp/0316386324" target="_blank">Ruin</a> by John Gwynne</strong>
+                <small class="d-block text-muted">
+                  <i class="bi bi-book" height="1em" width="1em"></i>
+                    11/03/2024
+                </small>
+                </span>
+              </label>
                 <label class="list-group-item d-flex gap-3">
                   <input class="form-check-input flex-shrink-0" type="checkbox" value="" style="font-size: 1.375em;">
                   <span class="pt-1 form-checked-content">
                   <strong><a href="https://www.amazon.com/DevOps-Handbook-Second-World-Class-Organizations/dp/B09L56CT6N/" target="_blank">The DevOps Handbook</a> by Kim, et al.</strong>
                   <small class="d-block text-muted">
-                    <i class="bi bi-book" height="1em" width="1em"></i>
+                    <i class="bi bi-calendar-check" height="1em" width="1em"></i>
                       20/02/2024
                   </small>
                   </span>
@@ -38,18 +48,8 @@
                   <span class="pt-1 form-checked-content">
                   <strong><a href="https://www.amazon.com/Valor-Faithful-Fallen-John-Gwynne/dp/0316399744" target="_blank">Valour</a> by John Gwynne</strong>
                   <small class="d-block text-muted">
-                    <i class="bi bi-book" height="1em" width="1em"></i>
+                    <i class="bi bi-calendar-check" height="1em" width="1em"></i>
                       16/02/2024
-                  </small>
-                  </span>
-                </label>
-                <label class="list-group-item d-flex gap-3">
-                  <input class="form-check-input flex-shrink-0" type="checkbox" value="" style="font-size: 1.375em;">
-                  <span class="pt-1 form-checked-content">
-                  <strong><a href="https://www.amazon.com/Thinking-Systems-Donella-H-Meadows/dp/1603580557/" target="_blank">Thinking in Systems</a> by Donella H. Meadows</strong>
-                  <small class="d-block text-muted">
-                    <i class="bi bi-book" height="1em" width="1em"></i>
-                      14/02/2024
                   </small>
                   </span>
                 </label>
@@ -142,6 +142,15 @@
                 Topics are usually related to startups, technology, security, and books.
             </p>
             <div class="list-group list-group-mine w-auto">
+                <a href="https://www.cognition-labs.com/blog" class="list-group-item list-group-item-action d-flex gap-3 py-3" target="_blank">
+                  <div class="d-flex gap-2 w-100 justify-content-between">
+                    <div>
+                      <h6 class="mb-0">Introducing Devin, the first AI software engineer</h6>
+                      <p class="mb-0 opacity-75">IMO, this changes nothing for software engineers. What do you think?</p>
+                    </div>
+                    <small class="opacity-50 text-nowrap">12/03/2024</small>
+                  </div>
+                </a>
                 <a href="https://blog.pragmaticengineer.com/the-product-minded-engineer/" class="list-group-item list-group-item-action d-flex gap-3 py-3" target="_blank">
                   <div class="d-flex gap-2 w-100 justify-content-between">
                     <div>
