--- a/index.html
+++ b/index.html
@@ -26,6 +26,16 @@
               <label class="list-group-item d-flex gap-3">
                 <input class="form-check-input flex-shrink-0" type="checkbox" value="" style="font-size: 1.375em;">
                 <span class="pt-1 form-checked-content">
+                <strong><a href="https://www.amazon.com/Project-Hail-Mary-Andy-Weir/dp/0593135202" target="_blank">Project Hail Mary</a> by Andy Weir</strong>
+                <small class="d-block text-muted">
+                  <i class="bi bi-book" height="1em" width="1em"></i>
+                    21/04/2024
+                </small>
+                </span>
+              </label>
+              <label class="list-group-item d-flex gap-3">
+                <input class="form-check-input flex-shrink-0" type="checkbox" value="" checked="" style="font-size: 1.375em;">
+                <span class="pt-1 form-checked-content">
                 <strong><a href="https://www.amazon.com/Steve-Jobs-Walter-Isaacson/dp/1451648537" target="_blank">Steve Jobs</a> by Walter Isaacson</strong>
                 <small class="d-block text-muted">
                   <i class="bi bi-calendar-check" height="1em" width="1em"></i>
@@ -34,11 +44,11 @@
                 </span>
               </label>
               <label class="list-group-item d-flex gap-3">
-                <input class="form-check-input flex-shrink-0" type="checkbox" value="" style="font-size: 1.375em;">
+                <input class="form-check-input flex-shrink-0" type="checkbox" value="" checked="" style="font-size: 1.375em;">
                 <span class="pt-1 form-checked-content">
                 <strong><a href="https://www.amazon.com/Wrath-Faithful-Fallen-John-Gwynne/dp/1447259688" target="_blank">Wrath</a> by John Gwynne</strong>
                 <small class="d-block text-muted">
-                  <i class="bi bi-book" height="1em" width="1em"></i>
+                  <i class="bi bi-calendar-check" height="1em" width="1em"></i>
                     20/03/2024
                 </small>
                 </span>
@@ -162,6 +172,33 @@
                 Topics are usually related to startups, technology, security, and books.
             </p>
             <div class="list-group list-group-mine w-auto">
+              <a href="https://www.wired.com/story/google-chrome-incognito-mode-data-deletion-settlement/" class="list-group-item list-group-item-action d-flex gap-3 py-3" target="_blank">
+                <div class="d-flex gap-2 w-100 justify-content-between">
+                  <div>
+                    <h6 class="mb-0">The Incognito Mode Myth Has Fully Unraveled</h6>
+                    <p class="mb-0 opacity-75">Two of the most common security lies: VPNs and Incognito (Privacy) mode.</p>
+                  </div>
+                  <small class="opacity-50 text-nowrap">21/04/2024</small>
+                </div>
+              </a>
+              <a href="https://www.wired.com/story/p4x-north-korea-internet-hacker-identity-reveal/" class="list-group-item list-group-item-action d-flex gap-3 py-3" target="_blank">
+                <div class="d-flex gap-2 w-100 justify-content-between">
+                  <div>
+                    <h6 class="mb-0">A Vigilante Hacker Took Down North Korea's Internet</h6>
+                    <p class="mb-0 opacity-75">This article about P4x, plus Wired's XZ backdoor research are great reads.</p>
+                  </div>
+                  <small class="opacity-50 text-nowrap">21/04/2024</small>
+                </div>
+              </a>
+              <a href="https://www.bleepingcomputer.com/news/security/github-comments-abused-to-push-malware-via-microsoft-repo-urls/" class="list-group-item list-group-item-action d-flex gap-3 py-3" target="_blank">
+                <div class="d-flex gap-2 w-100 justify-content-between">
+                  <div>
+                    <h6 class="mb-0">GitHub Comments Abused To Push Malware Via Microsoft Repo URLs</h6>
+                    <p class="mb-0 opacity-75">One of the craziest lures I have seen, easy to fall for.</p>
+                  </div>
+                  <small class="opacity-50 text-nowrap">20/04/2024</small>
+                </div>
+              </a>
               <a href="https://reflex.dev/blog/2024-03-21-reflex-architecture/" class="list-group-item list-group-item-action d-flex gap-3 py-3" target="_blank">
                 <div class="d-flex gap-2 w-100 justify-content-between">
                   <div>
